# 2d-boids-sfml

./: CMakeLists.txt  README.md
src/: boid.h  defs.h  main.cpp  quad_tree.h
